polished code for proto3, added and removed some content in proto3

--- a/proto3.tex
+++ b/proto3.tex
@@ -48,28 +48,28 @@ The base implementation used for this prototype  is \cite{website:mini-prolog-hu
 strategies
 \subsection{Stack Engine}
 \begin{singlespace}
-\inputminted[linenos]{haskell}{haskell-proto3-sudsy-woe.hs}
+\inputminted[linenos, firstline=29, lastline=62]{haskell}{haskell-proto3-sudsy-woe.hs}
 \end{singlespace}
 
 \subsection{Pure Engine}
 \begin{singlespace}
-\inputminted[linenos]{haskell}{haskell-proto3-absurd-silicon.hs}
+\inputminted[linenos, firstline=26, lastline=46]{haskell}{haskell-proto3-absurd-silicon.hs}
 \end{singlespace}
 
 \subsection{Andorra Engine}
 \begin{singlespace}
-\inputminted[linenos]{haskell}{haskell-proto3-diatomic-unbank.hs}
+\inputminted[linenos, firstline=29, lastline=75]{haskell}{haskell-proto3-diatomic-unbank.hs}
 \end{singlespace}
 
 \section{Current Unification}
 \begin{singlespace}
-  \inputminted[linenos]{haskell}{haskell-proto3-pentyl-skater.hs}
+  \inputminted[linenos, firstline=65, lastline=82]{haskell}{haskell-proto3-pentyl-skater.hs}
 \end{singlespace}
 
 
 \section{Syntax Modification}
 \begin{singlespace}
-  \inputminted[linenos]{haskell}{haskell-proto3-uplift-apart.hs}
+  \inputminted[linenos, lastline=352]{haskell}{haskell-proto3-uplift-apart.hs}
 \end{singlespace}
 
 \section{Monadic Unification}
@@ -79,6 +79,7 @@ strategies
 
 
 \section{Chapter Recapitulation}
-
+Recapitulating, this chapter provided us with a working implementation of a \progLang{Prolog}-like interpreter with the option to change
+the search strategy further proving the modularity and genericity of the language modification and monadic unification procedure.
 
 \end{document}
