Two fixes to introduction notes.

--- a/introduction.tex
+++ b/introduction.tex
@@ -68,7 +68,7 @@ The successors attempt to introduce new concepts and features to simplify the pr
 assist the programmer by lessening the burden of carrying out standard tasks and procedures.
 A new one tries to capture the best of the old; learn from the mistakes, add new concepts and move on; which seems
 to be good enough from an evolutionary perspective.
-However,\butbut{\mehul{changed}} all is not that straight forward when shifting from one language to another.
+However, all is not that straight forward when shifting from one language to another.
 There are costs and incompatibilities to look at.
 A language might be simple to use and provide better performance than its predecessor but not always be worth the
 switch.
@@ -119,9 +119,7 @@ particular problem domain.\label{sec:DSL-def}
 In many cases, DSL programs are translated to calls to a common subroutine library and the DSL can be viewed as a
 means to hide the details of that library \cite{van2000domain}. A domain specific language (DSL) is built specically to express the 
 concepts of a particular domain. Generally, two types of DSL can be distinguished according to the underlying implementation strategy. An
-external DSL (eDSL)\endnote{%
-  If you want to use the abbreviation ``\textit{eDSL}'' in 4.3.1 you need to define it.
-}\elabel{eDSL1}
+external DSL (eDSL)
 is constructed from scratch, starting from definition of the desired syntax to implementation of the associated parser for reading it. In contrast, internal or embedded DSL are constructed on top of an existing host language \cite{machadomodel}.
 
 Putting all of the above together, Domain Specific Languages
