meeting commit : addressed notes in introduction.tex

--- a/introduction.tex
+++ b/introduction.tex
@@ -16,10 +16,6 @@
 This chapter introduces the scope of the thesis along with the preliminary arguments.
 
 
-\noindent\rule{\textwidth}{0.5pt}
-%-----------------------------------------------------------------------------
-
-
 \section{Beginnings}
 
 Programming has become an integral part of working and interacting with computers and day by day more and more
@@ -133,11 +129,7 @@ accomplishing  mundane tasks.
 Approaching towards the solution can be complicated and tiresome, but the programming language in question acts as
 the master key.
 A general purpose language, as the name suggests, provides a general set of tools to cover many problem domains.
-The downside is that such general purpose languages\endnote{%
-  \david{find a cute metaphor}
-  \mehul{thinking.....}
-}
-lack tools specific to certain problem domains.
+The downside is that such general purpose languages lack tools specific to certain problem domains.
 
 Flipping the coin to the other side, we see, the more specific the language is to the problem domain, the easier it
 is to solve the problem since the solution need not be moulded according to the capability  of the language.
