--- a/accomplishedWork.tex
+++ b/accomplishedWork.tex
@@ -18,6 +18,14 @@ prototype. Moreover, we state the other 'soft'
 
 contributions of this thesis.
 
+\section{Possible directions for \progLang{Prolog} in \progLang{Haskell}}\label{sec:work-in-points}
+
+This thesis provides a literature review on embedded domain specific languages in Chapter~\ref{chap:embedding} and a survey on
+multi paradigm declarative languages in Chapter~\ref{chap:multiparadigm}. The current chapter and Chapter~\ref{chap:proposedWork} evaluate 
+and assess the current work for embedding \progLang{Prolog} in \progLang{Haskell}. 
+
+This thesis also provides an environment for 
+multiple \progLang{Haskell} libraries which provide parts of \progLang{Prolog}-like functionality. 
 
 
 \section{The prototypes}\label{sec:advances:accomplishedWork}
@@ -77,8 +85,11 @@ Most languages have a recursive abstract syntax which restricts the embedded, do
   (\chapterReference{proto4}{Prototype 4}) throws light on how IO operations can be embedded into the abstract
   syntax of a DSL which when interpreted would produce output consisting of a pure set of instructions irrespective
   of the nature of the construct.
-  The effects are only produced only when the actions are executed.
+  The effects are produced only when the actions are executed.
 
+  Chapter~\ref{proto4} attempts at creating a micro 
+language to represent and encapsulate IO operation in an eDSL so that the it remains pure even after interpretation and only produces side 
+effects when the action is actually executed and hence in some way it can be controlled. 
 
 \begin{comment}
 \section{Thesis Improved Contributions}\label{sec:thes-impr-contr}
@@ -112,41 +123,6 @@ statement) which when executed would result in a side effect but till that point
 
 \end{enumerate}
 \end{comment}
-
-
-\section{Possible directions for \progLang{Prolog} in \progLang{Haskell}}\label{sec:work-in-points}
-\begin{enumerate}
-\item Literature review on eDSL's.
-
-\item Short survey on multi paradigm declarative languages.
-
-\item Accumulated and evaluated \progLang{Prolog} in \progLang{Haskell}.
-
-\item Defined a procedure to open up a language starting from a generic recursive abstract syntax.
-
-\item Made a few libraries to work together.
-
-\item Some stuff for monadic unification.
-
-\item Something to show it was modular and independent of the original grammar.
-
-\item
-  Something to show that the unification part is independent of the search strategy and hence multiple ones can be
-  used, possibly simultaneously to find a solution.
-
-\item
-  Creating a micro language to represent and encapsulate IO operation in an eDSL so that the it remains pure even
-  after interpretation and only produces side effects when the action is actually executed and hence in some way it
-  can be controlled.
-
-\end{enumerate}
-
-Furthermore, this thesis provides a literature review on embedded domain specific languages in Chapter~\ref{chap:embedding} and a survey on
-multi paradigm declarative languages in Chapter~\ref{chap:multiparadigm}. The current chapter and Chapter~\ref{chap:proposedWork} evaluate 
-and assess the current work for embedding \progLang{Prolog} in \progLang{Haskell}. Chapter~\ref{proto4} attempts at creating a micro 
-language to represent and encapsulate IO operation in an eDSL so that the it remains pure even after interpretation and only produces side 
-effects when the action is actually executed and hence in some way it can be controlled. This thesis also provides an environment for 
-multiple \progLang{Haskell} libraries which provide parts of \progLang{Prolog}-like functionality. 
 
 
 \section{Chapter Recapitulation}
