--- a/accomplishedWork.tex
+++ b/accomplishedWork.tex
@@ -11,12 +11,11 @@
 %-----------------------------------------------------------------------------
 
 \section{About this chapter}\label{sec:what-this-chapter:accomplishedWork}
-This chapter provides the details for the conceptual contributions of this thesis along with information on the implementation of each 
-prototype. Moreover, we state the other 'soft'
 
-\mehul{surveys, making libraries work etc etc} 
-
-contributions of this thesis.
+Having looked at the existing work for embedding \progLang{Prolog} in \progLang{Haskell} along with the suggestions for improvement in the previous chapter, 
+this chapter describes further contributions.
+The thesis reviews literature on combining two languages as described in Section~\ref{sec:work-in-points}.
+Section~\ref{sec:prototypes} describes the minimalistic implementations for the ideas presented in this thesis.
 
 \section{Possible directions for \progLang{Prolog} in \progLang{Haskell}}\label{sec:work-in-points}
 
@@ -28,7 +27,7 @@ This thesis also provides an environment for
 multiple \progLang{Haskell} libraries which provide parts of \progLang{Prolog}-like functionality. 
 
 
-\section{The prototypes}\label{sec:advances:accomplishedWork}
+\section{The prototypes}\label{sec:prototypes}
 A large part of this thesis consists of prototypes of a \progLang{Prolog}-like language in \progLang{Haskell}. The conceptual advances of 
 these prototypes are:
 \begin{enumerate}
