meeting commit : addressed notes and removed recap in chapter 4

--- a/accomplishedWork.tex
+++ b/accomplishedWork.tex
@@ -48,10 +48,7 @@ The details of these prototypes follows.
 \subsection{Prototype 1}
 
 Most languages have a recursive abstract syntax which restricts the embedded, domain-specific language
-  \enparen{eDSL, see p.~\pageref{sec:DSL-def}}\endnote{%  
-    See Note~\eref{eDSL1}, then remove this.
-    \mehul{addressed note 2}
-}
+  \enparen{eDSL, see p.~\pageref{sec:DSL-def}}
   in terms of its capability to \textit{open up} the language, i.e, to include meta syntactic
   variables, custom quantifiers and logic.
   (\chapterReference{proto1}{Prototype 1}) provides a methodology to convert a language whose recursive abstract
@@ -119,9 +116,7 @@ statement) which when executed would result in a side effect but till that point
 \end{enumerate}
 \end{comment}
 
-
-\section{Chapter Recapitulation}
-Recapitulating, this chapter provides a brief look into each of the prototypes and the ideas behind them.
+The next two chapters are the literature review.
 
 \ifMain
 \begin{scope}
