--- a/introduction.tex
+++ b/introduction.tex
@@ -109,6 +109,8 @@ So the question is how to have all the good qualities of \textsc{Prolog} without
 One idea is to make \progLang{Prolog} an add-on to another language which is widely used and in demand.
 Here the choice is \progLang{Haskell}; as both the languages are declarative they share a common background which
 can help to blend the two.
+\progLang{Haskell} also has some support for logic programming \cite{website:logic-programming-haskell} which
+enables encoding of search problems.
 
 A domain-specific language (DSL) is a concise micro language that offers tools and functionalities focused on a
 particular problem domain.\label{sec:DSL-def}
