--- a/embedding.tex
+++ b/embedding.tex
@@ -46,20 +46,14 @@ It comes with three engines for query resolution, but still lacks practical \pro
 This seems to be a common problem with the other implementations, \cite{website:takashi-workplace}.
 Other informal discussions of \progLang{Prolog} have already been mentioned in Chapter~\ref{chap:introduction}.
 
-\section{Books related to embedding Programming Languges}
+\section{Books related to implementing logic programming}
 
-As \progLang{Haskell} is relatively new in terms of being popular, other functional languages such as \progLang{Scheme} have
-explored the problem of embedding in great depth. \cite{friedman05reasoned} aims at adding a few
-constructs to \progLang{Scheme} to bring together both styles of declarative programming and capture the essence of
-\progLang{Prolog} in the host language.
-Moreover, \progLang{Haskell} also claims for it to be suitable for basic logic programming using the
-\haskellConstruct{List Monad} \cite{website:logicprogexamplehaskell}.
-A general outlook towards implementing \progLang{Prolog} has also been discussed by
-\cite{krishnamurthi2007programming} to popularize the idea of embedding \progLang{Prolog}.\endnote{%
-  This \P{} needs a lot of work.
-  I do not understand what you say the references say.
-  \mehul{changed}
-}
+Some books related to implementing logic programming are \cite{friedman05reasoned}, \cite{website:logicprogexamplehaskell}, 
+\cite{krishnamurthi2007programming}. \cite{friedman05reasoned} aims at adding a few
+constructs to \progLang{Scheme} to bring together the functional and logic styles of programming and capture the essence of
+\progLang{Prolog} in \progLang{Scheme}. Moreover, \cite{website:logicprogexamplehaskell} claims that \progLang{Haskell} is suitable for basic logic
+programming using the \haskellConstruct{List Monad}.
+\cite{krishnamurthi2007programming} provides a general outlook towards embedding \progLang{Prolog} in other languages.
 
 \section{Papers related to embedding Programming Languges}
 
