edited section headers caps in introduction

--- a/introduction.tex
+++ b/introduction.tex
@@ -44,7 +44,7 @@ This results in a hybrid approach which provides a library taking advantage of t
 
 
 
-\section{Thesis Statement}
+\section{Thesis statement}
 
 %The thesis aims to provide insights into merging two declarative languages namely, \progLang{Haskell} and
 \progLang{Prolog} by embedding the latter into the former and analyzing the result of doing so as they have
@@ -54,7 +54,7 @@ like capabilities.
 
 
 %----------------------------------------------------------------------------
-\section{Problem Statement}
+\section{Problem statement}
 %----------------------------------------------------------------------------
 
 Over the years the development of programming languages has become more and more rapid.
@@ -196,7 +196,7 @@ This can be achieved in two ways:
 
 
 %----------------------------------------------------------------------------
-\section{Thesis Organization}
+\section{Thesis organization}
 
 The next chapter, \chapterReference{chap:proposedWork}{Chapter 2} provides details about the shortcomings of the
 previous works and an approach for improvements.
