edited section headers caps in chapter 3

--- a/proposedWork.tex
+++ b/proposedWork.tex
@@ -16,7 +16,7 @@ This chapter discusses the current implementations and publications for embeddin
 and specifically in \progLang{Haskell}. We take a look at their shortcomings and propose improvements.
 
 
-\section{\protect{Existing Work by Others}} \label{sec:existing-work-by-others}
+\section{\protect{Existing work by others}} \label{sec:existing-work-by-others}
 
 There have been several attempts at embedding \progLang{Prolog} into \progLang{Haskell}, which are
 discussed below, along with their shortcomings.
@@ -91,7 +91,7 @@ tackles.
 \item The implementation is not REPL based. You can write a program file and compile and run it like a normal a \progLang{Haskell} file.
 \end{enumerate}
 
-\section{Chapter Recapitulation}
+\section{Chapter recapitulation}
 This chapter reviewed current work and proposed improvements. The next chapter
 provides the contributions of this thesis which are not necessarily built upon existing work.
 
