edited section headers caps in multiparadigm.tex

--- a/multiparadigm.tex
+++ b/multiparadigm.tex
@@ -33,10 +33,10 @@ programming paradigm \cite{Krishnamurthi:2008:TPL:1480828.1480846}.Moreover, as 
 programmers can work in a variety of styles, freely intermixing constructs from different paradigms.''
 
 
-\section{The Informal Content from Blogs, Articles and Internet Discussions}
+\section{The informal content from blogs, articles and internet discussions}
 %\begin{description}
   
-\subsection{Multi Paradigm Languages}
+\subsection{Multi paradigm languages}
 
 A lot has been worked upon before coming to clear grounds about the classification of programming languages.
 One approach is to consider that the scope of each language is pretty much infinite as small extension modules that
@@ -58,7 +58,7 @@ is a very broad topic and specifying details can be helpful.\endnote{%
   \mehul{discussion required}
 }
 
-\subsection{Functional Logic Programming Languages}
+\subsection{Functional logic programming languages}
 
 Continuing from the previous section, we narrow down the scope by considering only multi paradigm declarative
 languages, i.e. functional logical programming languages.
@@ -84,9 +84,9 @@ Michael Hanus \cite{website:mhanus} and Sergio Antoy \cite{website:santoy}.
 %\end{description}
 
 
-\section{Literature and Publications}
+\section{Literature and publications}
 %\begin{description}
-\subsection{Multi Paradigm Languages}
+\subsection{Multi paradigm languages}
 Possibly one of the most important works towards bringing programming styles together is the book by C.A.R.
 Hoare \cite{hoare1998unifying} which points out that among the large number of programming paradigms and/or
 theories the unification theory serves as a complementary rather than a replacement to relate the universe.
@@ -94,7 +94,7 @@ As as always since we are talking about \progLang{Haskell} we must include monad
 monads \cite{gibbons2013unifying}.
  
 
-\subsection{Functional Logic Programming Languages}
+\subsection{Functional logic programming languages}
 
 A recent survey \cite{hanus2007multi} throws light on these hybrid languages. 
 
@@ -128,7 +128,7 @@ Although the language can do a lot; gaps do exist, such as the improvement of na
  
 %\end{description}
 
-\section{Some Multi Paradigm Languages}
+\section{Some multi paradigm languages}
 
 The list of multi paradigm languages is huge, but in this thesis we will mostly stick to functional logical
 programming languages. Beginning with functional hybrids, a small project language called \progLang{Virgil}
@@ -149,7 +149,7 @@ As mentioned before, one of the most poplar \cite{website:langpop} and widely us
 the \progLang{Scala} \cite{website:scala} programming language.
 
 
-\section{Functional Logic Programming Languages}
+\section{Functional logic programming languages}
 
 Knowing the amount of literature  on these type of languages, it is fairly easy to say that there have been numerous 
 attempts at specifications and implementations.
@@ -192,7 +192,7 @@ with support for deterministic and non-deterministic computations. Contributing 
 predecessors \cite{website:alf,website:toy}.        
 
 
-\section{Chapter Recapitulation}
+\section{Chapter recapitulation}
 Recapitulating, this chapter surveys the approach to merging different programming paradigms to result in a hybrid programming language. Moreover, we talked about multi paradigm declarative languages along with \progLang{Prolog} and \progLang{Haskell} hybrids.  
 
 
