edited section headers caps in relatedWork.tex

--- a/relatedWork.tex
+++ b/relatedWork.tex
@@ -68,7 +68,7 @@ For a given functor \haskellConstruct{f} and a carrier type \markWord{a} the alg
 Often this function itself is called the algebra, hence my use of the name \markWord{alg} in previous examples.
 
 
-\section{Monads by example: The State Monad}
+\section{Monads by example: state monad}
 
 In this section we try and replicate a dictionary of variables. The operations such as adding and removing entries to and from the
 dictionary are implemented so as to replicate modification. Listing~\ref{tab:hskllmndworkngdatatype} shows the structure of the 
@@ -301,7 +301,7 @@ Standard set: foo, bar, baz, foobar/quux, quuux, quuuux, ....
 example: ``Suppose I have a list, foo, with a node, bar, ...''
 
 
-\section{Chapter Recapitulation}
+\section{Chapter recapitulation}
 
 
 \end{document}
