edited section headers caps in hwh.tex

--- a/hwh.tex
+++ b/hwh.tex
@@ -96,7 +96,7 @@ This results in the ability to define infinite data structures because at execut
 
 
 
-\section{Chapter Recapitulation}
+\section{Chapter recapitulation}
 Recapitulating, this chapter provided information on \progLang{Haskell} as a tool for embedding domain specific languages.
 
 
