edited section headers caps in pwp.tex

--- a/pwp.tex
+++ b/pwp.tex
@@ -239,7 +239,7 @@ $\backslash$constraints\_2 $<=>$ body ] The constraints\_1 constraints are not c
 
 
 
-\section{Chapter Recapitulation}
+\section{Chapter recapitulation}
 
 \ifMain
 \begin{scope}
