edited section headers caps in proto1.tex

--- a/proto1.tex
+++ b/proto1.tex
@@ -108,7 +108,7 @@ The implementation consists of the following components:
 Each of the components are discussed in the following sections.
 
 
-\section{How Prolog works}
+\section{How \progLang{Prolog} works}
 
 To replicate \progLang{Prolog} we look into how it works \enparen{see, for instance,
       \textup{\cite{webiste:learnprolognow}}}.
@@ -219,7 +219,7 @@ In this prototype we explore the unification aspect only.
 \label{fig:Trace for append}
 \end{figure}
 
-\section{What we do in this Prototype}
+\section{What we do in this prototype}
 
 \begin{figure}[H]
   \includegraphics[width=1\textwidth]{Prototype-1.pdf}
@@ -864,7 +864,7 @@ The final reconversion to return a list of substitutions,
   \label{tab:vars-extract}
 \end{code-list}
 
-\section{Chapter Recapitulation}
+\section{Chapter recapitulation}
 
 \ifMain
 \begin{scope}
