edited section headers caps in proto2.tex

--- a/proto2.tex
+++ b/proto2.tex
@@ -261,7 +261,7 @@ Retranslate the terms back to fixed flat terms and return results.
 
 
 
-\section{Chapter Recapitulation}
+\section{Chapter recapitulation}
 Recapitulating, this chapter provides the details on a \progLang{Prolog} query resolver adapted to perform unification in a monadic way. 
 
 
