--- a/proto3.tex
+++ b/proto3.tex
@@ -54,39 +54,39 @@ the resolver searches to create and a list of  goals and then tries to achieve e
 \section{Search strategies}
 The base implementation used for this prototype  is \cite{website:mini-prolog-hugs98} and below are the search
 strategies
-\subsection{Stack Engine}
+\subsection{Stack engine}
 \begin{singlespace}
 \inputminted[linenos, firstline=29, lastline=62]{haskell}{haskell-proto3-sudsy-woe.hs}
 \end{singlespace}
 
-\subsection{Pure Engine}
+\subsection{Pure engine}
 \begin{singlespace}
 \inputminted[linenos, firstline=26, lastline=46]{haskell}{haskell-proto3-absurd-silicon.hs}
 \end{singlespace}
 
-\subsection{Andorra Engine}
+\subsection{Andorra engine}
 \begin{singlespace}
 \inputminted[linenos, firstline=29, lastline=75]{haskell}{haskell-proto3-diatomic-unbank.hs}
 \end{singlespace}
 
-\section{Current Unification}
+\section{Current unification}
 \begin{singlespace}
   \inputminted[linenos, firstline=65, lastline=82]{haskell}{haskell-proto3-pentyl-skater.hs}
 \end{singlespace}
 
 
-\section{Syntax Modification}
+\section{Syntax modification}
 \begin{singlespace}
   \inputminted[linenos, lastline=352]{haskell}{haskell-proto3-uplift-apart.hs}
 \end{singlespace}
 
-\section{Monadic Unification}
+\section{Monadic unification}
 \begin{singlespace}
   \inputminted[linenos]{haskell}{haskell-proto3-bevy-icebox.hs}
 \end{singlespace}
 
 
-\section{Chapter Recapitulation}
+\section{Chapter recapitulation}
 Recapitulating, this chapter provided us with a working implementation of a \progLang{Prolog}-like interpreter with the option to change
 the search strategy further proving the modularity and genericity of the language modification and monadic unification procedure.
 
