edited section headers caps in proto4.tex

--- a/proto4.tex
+++ b/proto4.tex
@@ -196,12 +196,12 @@ and it will never do anything except reading from \markWord{stdin} and writing t
   \inputminted[linenos]{haskell}{haskell-proto4-purvey-wincer.hs}
 \end{singlespace}
 
-\section{Dr. Casperson Pure IO}
+\section{Dr. Casperson pure IO}
 \begin{singlespace}
   \inputminted[linenos]{haskell}{haskell-proto4-myrtle-uppers.hs}
 \end{singlespace}
 
-\section{Mehul Pure IO}
+\section{Mehul pure IO}
 
 So when the program is getting interpreted the interpreter encounters an IO operation which then gets "interpreted" to the above and it 
 continues normally.
@@ -216,7 +216,7 @@ if the running is done inside a monad then the IO still is pure.
 \end{singlespace}
 
 
-\section{Chapter Recapitulation}
+\section{Chapter recapitulation}
 
 \ifMain
 \begin{scope}
