edited section headers caps in futureScope.tex

--- a/futureScope.tex
+++ b/futureScope.tex
@@ -16,6 +16,7 @@
 \noindent\rule{\textwidth}{0.5pt}
 %-----------------------------------------------------------------------------
 
+\section{Section title needed}
 
 \begin{enumerate}
 
@@ -57,7 +58,7 @@ data ResultWithIO typevariableforpureexpressions typevariableforioexpressions
 \end{enumerate}
 
 
-\section{Chapter Recapitulation}
+\section{Chapter recapitulation}
 
 \ifMain
 \begin{scope}
